<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.customfood.CustomFoodActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/tvCustomFoodTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/breakfast"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="0dp"
            app:icon="@drawable/baseline_arrow_back"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/calories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCustomFoodTitle" />

        <SeekBar
            android:id="@+id/sbCalories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="2000"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCalories" />

        <TextView
            android:id="@+id/quantityCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/calories_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbCalories" />

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/fat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityCalories" />

        <SeekBar
            android:id="@+id/sbFat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="100"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFat" />

        <TextView
            android:id="@+id/quantityFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/fat_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbFat" />

        <TextView
            android:id="@+id/tvSaturatedFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/saturated_fat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityFat" />

        <SeekBar
            android:id="@+id/sbSaturatedFat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="13"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSaturatedFat" />

        <TextView
            android:id="@+id/quantitySaturatedFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/saturatedfat_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbSaturatedFat" />

        <TextView
            android:id="@+id/tvCholesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/cholesterol"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantitySaturatedFat" />

        <SeekBar
            android:id="@+id/sbCholesterol"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="300"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCholesterol" />

        <TextView
            android:id="@+id/quantityCholesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/cholesterol_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbCholesterol" />

        <TextView
            android:id="@+id/tvSodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sodium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityCholesterol" />

        <SeekBar
            android:id="@+id/sbSodium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="2300"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSodium" />

        <TextView
            android:id="@+id/quantitySodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sodium_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbSodium" />

        <TextView
            android:id="@+id/tvCarbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/carbohydrate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantitySodium" />

        <SeekBar
            android:id="@+id/sbCarbohydrate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="325"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCarbohydrate" />

        <TextView
            android:id="@+id/quantityCarbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/carbohydrate_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbCarbohydrate" />

        <TextView
            android:id="@+id/tvFiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/fiber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityCarbohydrate" />

        <SeekBar
            android:id="@+id/sbFiber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="40"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFiber" />

        <TextView
            android:id="@+id/quantityFiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/fiber_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbFiber" />

        <TextView
            android:id="@+id/tvSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sugar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityFiber" />

        <SeekBar
            android:id="@+id/sbSugar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="40"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSugar" />

        <TextView
            android:id="@+id/quantitySugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sugar_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbSugar" />

        <TextView
            android:id="@+id/tvProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/protein"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantitySugar" />

        <SeekBar
            android:id="@+id/sbProtein"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:max="200"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProtein" />

        <TextView
            android:id="@+id/quantityProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/protein_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbProtein" />

        <Button
            android:id="@+id/btnGetMealsSugesstion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/get_meals_suggestion"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/quantityProtein" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>