<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ui.profile.ProfileActivity" >

    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/profile"
        android:textSize="15sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnArrowBack"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="0dp"
        app:icon="@drawable/baseline_arrow_back"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfileTitle"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/name_dummy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="5dp"
        android:text="@string/edit_profile"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_edit_24"
        app:iconPadding="20dp"
        app:iconTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfileName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="5dp"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:iconPadding="20dp"
        app:icon="@drawable/baseline_language_24"
        app:iconTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile" />

  <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="@font/poppins_regular"
        android:paddingVertical="5dp"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:iconPadding="20dp"
        app:icon="@drawable/baseline_logout_24"
        app:iconTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLanguage" />

</androidx.constraintlayout.widget.ConstraintLayout>