<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tvRegistTitleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/hellothere"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/regist"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistTitleWelcome"/>

    <!-- Icon Aplikasi -->
    <ImageView
        android:id="@+id/fitJourneyIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:src="@drawable/fitjourneyregist"
        android:transitionName="icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Full Name (TextView) -->
    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/full_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fitJourneyIcon"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle"
        app:startIconDrawable="@drawable/baseline_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_text"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Other elements below, unchanged -->
    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
        app:startIconDrawable="@drawable/baseline_email">

        <id.my.fitJourney.customview.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_text"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle"
        app:startIconDrawable="@drawable/baseline_lock">

        <id.my.fitJourney.customview.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_text"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvConfirmPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPasswordTitle"
        app:startIconDrawable="@drawable/baseline_lock">

        <id.my.fitJourney.customview.PasswordEditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_text"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="10dp"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditTextLayout" />

    <TextView
        android:id="@+id/registerResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/switchToLogin"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/switchToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="5dp"
            android:text="@string/login"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>